Updated Code with Graphs and Flask

--- a/Cleaning CSV & Importing to Database.ipynb
+++ b/Cleaning CSV & Importing to Database.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
        "4  Albania  ALB  2004                             4.0"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
        "4  Albania  ALB  2004                             4.0"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,28 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Entity\n",
-      "Code\n",
-      "Year\n",
-      " (% of people living with HIV)\n"
-     ]
-    }
-   ],
-   "source": [
-    "for col in art_df.columns: \n",
-    "    print(col) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +286,7 @@
        "4  Albania  ALB  2004                      4.0"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +405,7 @@
        "4                                          29.399000                                         "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +506,7 @@
        "54                                          57.875000                                         "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +600,7 @@
        "54  Afghanistan  AFG  2004        57.875000"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -637,31 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Entity              object\n",
-       "Code                object\n",
-       "Year                 int64\n",
-       "Life_Expectancy    float64\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "five_years_life.dtypes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -678,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -783,7 +738,7 @@
        "4                                          73.556533                         "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -798,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -903,7 +858,7 @@
        "27                                         473.003433                         "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -918,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1009,7 +964,7 @@
        "27  Afghanistan  AFG  2017  302.166880      922.173458           473.003433"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1027,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1045,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1181,7 +1136,7 @@
        "4                        0.562373  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1196,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1332,7 +1287,7 @@
        "27                        1.087497  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1347,7 +1302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1374,12 +1329,12 @@
        "      <th>Entity</th>\n",
        "      <th>Code</th>\n",
        "      <th>Year</th>\n",
-       "      <th>(1-4)</th>\n",
+       "      <th>Toddlers</th>\n",
        "      <th>All ages (per 100,000)</th>\n",
-       "      <th>(70+)</th>\n",
-       "      <th>(5-14)</th>\n",
-       "      <th>(15-49)</th>\n",
-       "      <th>(50-69)</th>\n",
+       "      <th>Teens</th>\n",
+       "      <th>Adults</th>\n",
+       "      <th>Retired</th>\n",
+       "      <th>Elderly</th>\n",
        "      <th>Age-standardized (per 100,000)</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1454,14 +1409,14 @@
        "</div>"
       ],
       "text/plain": [
-       "         Entity Code  Year     (1-4)  All ages (per 100,000)     (70+)  \\\n",
+       "         Entity Code  Year  Toddlers  All ages (per 100,000)     Teens  \\\n",
        "23  Afghanistan  AFG  2013  1.086478                0.688092  0.698738   \n",
        "24  Afghanistan  AFG  2014  1.201211                0.722509  0.684093   \n",
        "25  Afghanistan  AFG  2015  1.355830                0.782104  0.675140   \n",
        "26  Afghanistan  AFG  2016  1.501508                0.848051  0.658624   \n",
        "27  Afghanistan  AFG  2017  1.708494                0.919705  0.645646   \n",
        "\n",
-       "      (5-14)   (15-49)   (50-69)  Age-standardized (per 100,000)  \n",
+       "      Adults   Retired   Elderly  Age-standardized (per 100,000)  \n",
        "23  0.046499  0.892967  1.331047                        0.884129  \n",
        "24  0.047263  0.908938  1.383621                        0.909027  \n",
        "25  0.048659  0.963127  1.442483                        0.962598  \n",
@@ -1469,18 +1424,18 @@
        "27  0.054208  1.086405  1.570305                        1.087497  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Rename the headers to be more explanatory\n",
-    "renamed_death_df = death_five_years.rename(columns={\"Under-5s (per 100,000)\": \"(1-4)\",\n",
-    "                                       \"70+ years old (per 100,000)\": \"(70+)\",\n",
-    "                                        \"5-14 years old (per 100,000)\": \"(5-14)\",\n",
-    "                                        \"15-49 years old (per 100,000)\": \"(15-49)\",\n",
-    "                                        \"50-69 years old (per 100,000)\": \"(50-69)\"\n",
+    "renamed_death_df = death_five_years.rename(columns={\"Under-5s (per 100,000)\": \"Toddlers\",\n",
+    "                                       \"70+ years old (per 100,000)\": \"Teens\",\n",
+    "                                        \"5-14 years old (per 100,000)\": \"Adults\",\n",
+    "                                        \"15-49 years old (per 100,000)\": \"Retired\",\n",
+    "                                        \"50-69 years old (per 100,000)\": \"Elderly\"\n",
     "                                        })\n",
     "\n",
     "\n",
@@ -1489,7 +1444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1515,11 +1470,11 @@
        "      <th></th>\n",
        "      <th>Entity</th>\n",
        "      <th>Year</th>\n",
-       "      <th>(1-4)</th>\n",
-       "      <th>(5-14)</th>\n",
-       "      <th>(15-49)</th>\n",
-       "      <th>(50-69)</th>\n",
-       "      <th>(70+)</th>\n",
+       "      <th>Toddlers</th>\n",
+       "      <th>Teens</th>\n",
+       "      <th>Adults</th>\n",
+       "      <th>Retired</th>\n",
+       "      <th>Elderly</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1528,65 +1483,65 @@
        "      <td>Afghanistan</td>\n",
        "      <td>2013</td>\n",
        "      <td>1.086478</td>\n",
+       "      <td>0.698738</td>\n",
        "      <td>0.046499</td>\n",
        "      <td>0.892967</td>\n",
        "      <td>1.331047</td>\n",
-       "      <td>0.698738</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>24</th>\n",
        "      <td>Afghanistan</td>\n",
        "      <td>2014</td>\n",
        "      <td>1.201211</td>\n",
+       "      <td>0.684093</td>\n",
        "      <td>0.047263</td>\n",
        "      <td>0.908938</td>\n",
        "      <td>1.383621</td>\n",
-       "      <td>0.684093</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25</th>\n",
        "      <td>Afghanistan</td>\n",
        "      <td>2015</td>\n",
        "      <td>1.355830</td>\n",
+       "      <td>0.675140</td>\n",
        "      <td>0.048659</td>\n",
        "      <td>0.963127</td>\n",
        "      <td>1.442483</td>\n",
-       "      <td>0.675140</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26</th>\n",
        "      <td>Afghanistan</td>\n",
        "      <td>2016</td>\n",
        "      <td>1.501508</td>\n",
+       "      <td>0.658624</td>\n",
        "      <td>0.049436</td>\n",
        "      <td>1.032328</td>\n",
        "      <td>1.518304</td>\n",
-       "      <td>0.658624</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>27</th>\n",
        "      <td>Afghanistan</td>\n",
        "      <td>2017</td>\n",
        "      <td>1.708494</td>\n",
+       "      <td>0.645646</td>\n",
        "      <td>0.054208</td>\n",
        "      <td>1.086405</td>\n",
        "      <td>1.570305</td>\n",
-       "      <td>0.645646</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         Entity  Year     (1-4)    (5-14)   (15-49)   (50-69)     (70+)\n",
-       "23  Afghanistan  2013  1.086478  0.046499  0.892967  1.331047  0.698738\n",
-       "24  Afghanistan  2014  1.201211  0.047263  0.908938  1.383621  0.684093\n",
-       "25  Afghanistan  2015  1.355830  0.048659  0.963127  1.442483  0.675140\n",
-       "26  Afghanistan  2016  1.501508  0.049436  1.032328  1.518304  0.658624\n",
-       "27  Afghanistan  2017  1.708494  0.054208  1.086405  1.570305  0.645646"
+       "         Entity  Year  Toddlers     Teens    Adults   Retired   Elderly\n",
+       "23  Afghanistan  2013  1.086478  0.698738  0.046499  0.892967  1.331047\n",
+       "24  Afghanistan  2014  1.201211  0.684093  0.047263  0.908938  1.383621\n",
+       "25  Afghanistan  2015  1.355830  0.675140  0.048659  0.963127  1.442483\n",
+       "26  Afghanistan  2016  1.501508  0.658624  0.049436  1.032328  1.518304\n",
+       "27  Afghanistan  2017  1.708494  0.645646  0.054208  1.086405  1.570305"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1594,15 +1549,15 @@
    "source": [
     "#only select the columns needed from dataframe \n",
     "\n",
-    "renamed_death_df = renamed_death_df[[\"Entity\", \"Year\", \"(1-4)\", \"(5-14)\",\n",
-    "                                    \"(15-49)\", \"(50-69)\", \"(70+)\"]]\n",
+    "renamed_death_df = renamed_death_df[[\"Entity\", \"Year\", \"Toddlers\", \"Teens\",\n",
+    "                                    \"Adults\", \"Retired\", \"Elderly\"]]\n",
     "\n",
     "renamed_death_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1620,7 +1575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1630,7 +1585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1640,7 +1595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1650,7 +1605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1660,7 +1615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
